# satellite

./: Cargo.toml  Dockerfile.dev  README.md  start.sh
config/: default.toml
crates/api-app/: Cargo.toml
crates/api-app/src/: lib.rs
crates/api-app/src/models/: app.rs  deployment.rs  deployment_node.rs
crates/api-app/src/payloads/: app.rs  deployment.rs  deployment_node.rs  mod.rs
crates/api-app/src/routes/: app.rs  deploy.rs  mod.rs
crates/api-graphql/: Cargo.toml
crates/api-graphql/src/: lib.rs
crates/api-graphql/src/routes/: graphiql.rs  graphql.rs
crates/api-node/: Cargo.toml
crates/api-node/src/: lib.rs
crates/api-node/src/models/: node.rs
crates/api-node/src/payloads/: node.rs
crates/api-node/src/routes/: heartbeat.rs  list.rs  mod.rs  node.rs  register.rs
crates/api-nodes/: Cargo.toml
crates/api-nodes/src/: lib.rs
crates/api-nodes/src/routes/: heartbeat.rs  list.rs  register.rs
crates/api-user/: Cargo.toml
crates/api-user/src/: lib.rs
crates/api-user/src/models/: team.rs  user.rs
crates/api-user/src/payloads/: user.rs
crates/api-user/src/routes/: team.rs  user.rs
crates/core/: Cargo.toml
crates/core/src/: database.rs  json.rs  lib.rs  node.rs  redis.rs  server.rs
crates/gw-core/: Cargo.toml
crates/gw-core/src/: app.rs  lib.rs  node.rs  server.rs
crates/kc-core/: Cargo.toml
crates/kc-core/src/: authentication.rs  lib.rs  redis.rs  server.rs
crates/kc-core/src/models/: app.rs  deployment.rs  deployment_node.rs  mod.rs  node.rs  query.rs  team.rs  user.rs
crates/kc-core/src/payloads/: deployment.rs  deployment_node.rs  mod.rs  team.rs
crates/kc-core/src/utils/: auth.rs
crates/web-server/: Cargo.toml
crates/web-server/src/: lib.rs
crates/web-server/src/routes/: app.rs  gateway.rs  mod.rs
gateway/: Cargo.toml
gateway/src/: main.rs
migrations/: 20251105000000_create_updated_trigger.up.sql  20251105145349_create_users_table.down.sql  20251105145349_create_users_table.up.sql  20251107114140_create_teams_table.down.sql  20251107114140_create_teams_table.up.sql  20251107124341_create_nodes_table.down.sql  20251107124341_create_nodes_table.up.sql  20251107162552_create_apps_table.down.sql  20251107162552_create_apps_table.up.sql
