[package]
name = "api-app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
chrono = "0.4.42"
serde = { version = "1.0.228", features = ["derive"] }
core = { path = "../core" }
reqwest = { version = "0.12.24", features = ["json", "multipart"] }
tokio = { version = "1.48.0", features = ["full"] }
