[package]
name = "api-app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
chrono = "0.4.42"
serde = { version = "1.0.228", features = ["derive"] }
kc-core = { path = "../kc-core" }
api-node = { path = "../api-node" }
reqwest = { version = "0.12.24", features = ["json", "multipart"] }
tokio = { version = "1.48.0", features = ["full"] }
serde_json = "1.0"
redis = { version = "0.32", features = ["tokio-comp", "aio", "json", "safe_iterators"] }
sqlx = { version = "0.8", default-features = false, features = [ "runtime-tokio", "postgres" ] }
struct_iterable = "0.1.1"
