[package]
name = "api-node"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
chrono = "0.4.42"
serde = { version = "1.0.228", features = ["derive"] }
core = { path = "../core" }
serde_json = "1.0"
redis = { version = "0.32", features = ["tokio-comp", "aio", "json", "safe_iterators"] }
