[package]
name = "api-user"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
chrono = "0.4.42"
serde = { version = "1.0.228", features = ["derive"] }
core = { path = "../core" }
tokio = { version = "1.48.0", features = ["full"] }
sqlx = { version = "0.8", default-features = false, features = [ "runtime-tokio", "postgres", "macros", "chrono", "uuid" ] }
struct_iterable = "0.1.1"
