[package]
name = "api-user"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
chrono = "0.4.42"
serde = { version = "1.0.228", features = ["derive"] }
kc-core = { path = "../kc-core" }
tokio = { version = "1.48.0", features = ["full"] }
sqlx = { version = "0.8", default-features = false, features = [ "runtime-tokio", "postgres", "macros", "chrono", "uuid" ] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
async-graphql = { version = "7.0.17", features = ["uuid", "chrono"] }
