[package]
name = "api-user"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
chrono = "0.4.42"
kc-core = { path = "../kc-core" }
sqlx = { version = "0.8", default-features = false, features = [ "runtime-tokio", "postgres", "macros", "chrono", "uuid" ] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
