[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
config = "0.15.18"
serde = { version = "1.0.228", features = ["derive"] }
tokio = "1.48.0"
sqlx = { version = "0.8", default-features = false, features = [ "runtime-tokio", "postgres" ] }
axum = "0.8.6"
axum-extra = { version = "0.12", features = ["typed-header"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
redis = { version = "0.32", features = ["tokio-comp", "cluster-async", "json"] }
